--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -48,6 +48,7 @@ set(EXERCISES
     TriangleTex
     SpherePhong
     Hello3D-Rodrigo
+    vivencial1
    
 )
 
@@ -78,3 +79,5 @@ foreach(EXERCISE ${EXERCISES})
     target_include_directories(${EXERCISE} PRIVATE ${CMAKE_SOURCE_DIR}/include/glad ${glm_SOURCE_DIR} ${stb_image_SOURCE_DIR})
     target_link_libraries(${EXERCISE} glfw ${OPENGL_LIBS})
 endforeach()
+
+target_sources(vivencial1 PRIVATE CodeSnippets/LoadSimpleOBJ.cpp)
